--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@mui/styles": "^5.15.11",
     "@next/font": "^14.1.0",
     "axios": "^1.6.7",
     "graphql": "15.8.0",
     "graphql-tag": "^2.12.6",
     "graphql-yoga": "three",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "next": "^13.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
